--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-uk-supports-world-day-against-the-death-penalty-day-10th-october-2013--2">The UK Supports World Day Against the Death Penalty Day- 10th October 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/police-conference-opening">Police conference opening</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/big-ideas-get-them-off-the-ground-in-the-uk--2">Big ideas? Get them off the ground in the UK</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/226373.pt">Declaração dos Líderes do G-7 sobre a Ucrânia</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--21">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/259217.pt">Britânicos visitam RS em busca de empreendedores e investidores</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/215108.es-419">Islas Falklands</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/233491.pt">Lord Mayor Fiona Woolf visita o Brasil para promover cooperação</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--32">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/251447.zh-tw">英國貿易文化辦事處對於復興航空GE222班機墜毀事件深表遺憾</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/embassy-closure--3">Embassy closure</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/womens-leadership-conference--3">Women’s Leadership Conference</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/disruption-to-emergency-contact-numbers-for-consular-assistance--3">Disruption to emergency contact numbers for consular assistance in Portugal</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/%E5%8A%A0%E5%BC%B7%E9%9B%99%E9%82%8A%E6%99%BA%E8%B2%A1%E6%AC%8A%E5%90%88%E4%BD%9C-%E8%8B%B1%E5%9C%8B%E8%88%87%E5%8F%B0%E7%81%A3%E7%B0%BD%E7%BD%B2%E6%99%BA%E6%85%A7%E8%B2%A1%E7%94%A2%E6%AC%8A%E5%90%88%E4%BD%9C%E5%82%99%E5%BF%98%E9%8C%84">加強雙邊智財權合作 英國與台灣簽署智慧財產權合作備忘錄</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/188230.pt">Fórum Live Experience  debate novas tendências em mega eventos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/falkland-islanders-make-case-for-self-determination-in-honduras">Falkland Islanders make case for self-determination in Honduras</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
