--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.renfrewshire.gov.uk">Renfrewshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.warwickshire.gov.uk/">Warwickshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.lbhf.gov.uk/">London Borough of Hammersmith and Fulham Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.beanenergyshopper.com/">Power to Switch</a></li>
+<li><a href="https://www.gov.ukhttp//www.redbridge.gov.uk/">London Borough of Redbridge Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.centralbedfordshire.gov.uk/">Central Bedfordshire Council</a></li>
+<li><a href="https://www.gov.ukhttps//gov.wales/covid-19-alert-levels">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
+<li><a href="https://www.gov.ukhttp//www.downdc.gov.uk">Down District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.castlereagh.gov.uk">Castlereagh Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/">NHS</a></li>
+<li><a href="https://www.gov.ukhttp//www.dundeecity.gov.uk">Dundee City Council</a></li>
+<li><a href="https://www.gov.ukhttp//ec.europa.eu/citizens-initiative">The European Citizens&rsquo; Initiative</a></li>
 <li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oxford.gov.uk">Oxford City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.aylesburyvaledc.gov.uk/">Aylesbury Vale District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.tamworth.gov.uk">Tamworth Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.merton.gov.uk/">London Borough of Merton Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
