--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="https://ve-vjday75.gov.uk/" class="govuk-link">VE Day and VJ Day: Marking 75 years since the end of the Second World War</a></li>
+      <li><a href="http://www.beanenergyshopper.com/" class="govuk-link">Power to Switch</a></li>
+      <li><a href="http://www.redbridge.gov.uk/" class="govuk-link">London Borough of Redbridge Council</a></li>
+      <li><a href="http://www.centralbedfordshire.gov.uk/" class="govuk-link">Central Bedfordshire Council</a></li>
+      <li><a href="https://gov.wales/covid-19-alert-levels" class="govuk-link">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
+      <li><a href="http://www.downdc.gov.uk" class="govuk-link">Down District Council</a></li>
       <li><a href="http://www.castlereagh.gov.uk" class="govuk-link">Castlereagh Borough Council</a></li>
-      <li><a href="http://www.barnet.gov.uk/" class="govuk-link">London Borough of Barnet Council</a></li>
-      <li><a href="http://www.watford.gov.uk/" class="govuk-link">Watford Borough Council</a></li>
-      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
-      <li><a href="https://www.nhs.uk/nhs-services/online-services/nhs-app/" class="govuk-link">NHS App</a></li>
-      <li><a href="http://www.dundeecity.gov.uk" class="govuk-link">Dundee City Council</a></li>
       <li><a href="https://www.nhs.uk/" class="govuk-link">NHS</a></li>
-      <li><a href="https://getintoteaching.education.gov.uk/" class="govuk-link">Get Into Teaching</a></li>
-      <li><a href="http://www.bolton.gov.uk" class="govuk-link">Bolton Metropolitan Borough Council</a></li>
+      <li><a href="http://www.dundeecity.gov.uk" class="govuk-link">Dundee City Council</a></li>
+      <li><a href="http://ec.europa.eu/citizens-initiative" class="govuk-link">The European Citizens&rsquo; Initiative</a></li>
+      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
